# sayvai-agents

./: .gitignore  readme.md
agents/calender-demo-agent/: pyproject.toml
agents/calender-demo-agent/demoagent/: agent.py
agents/excel-demo-agent/demoagent/: agent.py  csv_2_sql.py  dataframeagent.py  sayvai.db
agents/gmail-demo-agent/: .gitignore  README.md  app.py  pyproject.toml  run.py
agents/gmail-demo-agent/demoagent/: agent.py
agents/gmail-sql-demo-agent/: pyproject.toml
agents/gmail-sql-demo-agent/sayvai-agent/: agent.py
agents/groq-sayvai-demo/: Readme.md  pyproject.toml
agents/groq-sayvai-demo/sayvai-agent/: agent.py  my_db4.db
agents/multitaskagent/: pyproject.toml  test.py
agents/multitaskagent/multitask-agent/: agent.py
agents/sql-demo-agent/demoagent/: agent.py  csv_2_sql.py  sayvai.db
agents/streaming-agents/: .gitignore  csv_agent.py  gmail_agent.py  handler.py  index.html  main.py  pyproject.toml
agents/streaming-agents/data/: AAPL.csv
agents/streaming-agents/streaming-agents/: streaming.html
agents/streaming-agents/streaming-agents/css/: stylesheet.css
agents/streaming-agents/streaming-agents/js/: scripts.js
