[tool.poetry]
name = "sheets-demo-agent"
version = "0.1.0"
description = ""
authors = ["sanjaypranav <sanjaypriya195@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
