[tool.poetry]
name = "sayvai-demo-agent"
version = "0.1.0"
description = ""
authors = ["JayasuriyaE <jayasuriya352002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.13"
langchain = {extras = ["llms"], version = "^0.1.8"}
langchainhub = "^0.1.14"
streamlit = {extras = ["all"], version = "^1.31.1"}
sayvai-tools = {git = "https://github.com/Sayvai-io/custom-tools.git"}
chainlit = "^1.0.301"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
