[tool.poetry]
name = "gmail-sql-demo-agent"
version = "0.0.1"
description = "Demo agent for Sayvai"
authors = ["sanjaypranav <sanjaypriya195@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.13"
langchain-openai = "^0.1.1"
fastapi = "^0.110.0"
websockets = "^12.0"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
