[tool.poetry]
name = "gmail-sql-demo-agent"
version = "0.0.1"
description = "Demo agent for Sayvai"
authors = ["sanjaypranav <sanjaypriya195@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
langchain = "^0.1.13"
langchain-openai = "^0.1.1"
fastapi = "^0.110.0"
websockets = "^12.0"
uvicorn = "^0.29.0"
langchain-groq = "^0.1.0"
sayvai-tools = {git = "https://github.com/Sayvai-io/custom-tools.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
