[tool.poetry]
name = "multitaskagent"
version = "0.1.0"
description = ""
authors = ["sanjaypranav <sanjaypriya195@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.11"
langchain-openai = "^0.0.8"
langchain-community = "^0.0.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
