[tool.poetry]
name = "streaming-agents"
version = "0.1.0"
description = ""
authors = ["sanjaypranav <sanjaypriya195@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.13"
langchain = {extras = ["llms"], version = "^0.1.11"}
fastapi = {extras = ["all"], version = "^0.110.0"}
langchain-openai = "^0.0.8"
langchain-pinecone = "^0.0.3"
langchain-community = "^0.0.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
